--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,45 +1,66 @@
-<div class="container">
-    <div class="row">
-        <div class="col-sm text-center" id="topBar">
-            <h1>EAT DA BURGER!</h1>
+{{!-- main content --}}
+<div class="mainContainer">
+    {{!-- "burger image" --}}
+    <div class="imgContainer" id="burgerImg" class="alignCenter">
+        <img src="/assets/images/burger.png" alt="">
+    </div>
+    {{!-- -------------------------------------------------------------------------------- --}}
 
-        </div>
-        <div class="col-sm text-center" class="task">
-            <div class="row">
+    {{!-- title --}}
+    <div class="container">
+        <div class="row">
+            <div class="col-sm text-center" id="titleContainer">
+                <h1>EAT DA BURGER!</h1>
+            </div>
+            {{!-- -------------------------------------------------------------------------------- --}}
+
+            <div class="burgerContainer">
+                <div class="col-sm-6 text-center" class="task">
+                    <div class="row">
+                        {{#each burger_data}}
+                        {{#unless this.devoured}}
+                        <div class="col-sm text-center">
+                            <pre>{{this.id}}, {{this.burger_name}}</pre>
+                        </div>
+                        <div class="col-sm-6 text-center">
+                            <form methods="POST" action="/burgers/update?_method=PUT" class="button-size">
+                                <input type="hidden" name="burger_id" type="text" placeholder="Enter a burger you would like to eat"
+                                    value={{this.id}}>
+                                <br>
+
+                                {{!-- devour button --}}
+                                <button type="submit" class="btn btn-danger">DEVOUR!</button>
+                            </form>
+                        </div>
+                        {{/unless}}
+                        {{/each}}
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm text-center" class="task">
                 {{#each burger_data}}
-                {{#unless this.devoured}}
-                <div class="col-sm text-center">
-                    <pre>{{this.id}}, {{this.burger_name}}</pre>
-                </div>
-                <div class="com-sm text-center">
-                    <form methods="POST" action="/burgers/update?_method=PUT" class="button-size">
-                        <input type="hidden" name="burger_id" type="text" value={{this.id}}><br><button type="submit"
-                            class="btn btn-default">DEVOUR!</button>
-                    </form>
-                </div>
-                {{/unless}}
+                {{#if this.devoured}}
+                <input class="form-control" type"text" placeholder="{{this.id}}.{{this.burger_name}}" readonly>
+                {{/if}}
                 {{/each}}
             </div>
         </div>
-        <div class="col-sm text-center" class="task">
-            {{#each burger_data}}
-            {{#if this.devoured}}
-            <input class="form-control" type"text" placeholder="{{this.id}}.{{this.burger_name}}" readonly>
-            {{/if}}
-            {{/each}}
+    </div>
+    {{!-- -------------------------------------------------------------------------------- --}}
+    <div class="container" id="userBurgerContainer">
+        <div class="row">
+            <div class="col-sm text-center enter_section">
+                <form action="/burgers/create" method="POST">
+                    <input type="text" name="burger_name" class="form-control" value="" id="enter_text">
+                </form>
+                {{!-- -------------------------------------------------------------------------------- --}}
+                {{!-- submit button --}}
+                <div class="submitButtonContainer">
+                    <button type="submit" class="btn btn-primary" id="text-enter-button">SUBMIT</button>
+                    <p>Enter a burger you would like to eat</p>
+                </div>
+                {{!-- -------------------------------------------------------------------------------- --}}
+            </div>
         </div>
     </div>
-</div>
-
-<div class="container">
-    <div class="row">
-        <div class="col-sm text-center enter_section">
-            <form action="/burgers/create" method="POST">
-                <input type="text" name="burger_name" class="form-control" value="" id="enter_text"><button type="submit"
-                    class="btn btn primary" id="text-enter-button">SUBMIT</button>
-            </form>
-            <p>Enter a burger you would like to eat</p>
-        </div>
-    </div>
-</div>
 </div>
