--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -12,37 +12,38 @@
             <div class="col-sm text-center" id="titleContainer">
                 <h1>EAT DA BURGER!</h1>
             </div>
-            {{!-- -------------------------------------------------------------------------------- --}}
+        </div>
+        {{!-- -------------------------------------------------------------------------------- --}}
 
-            <div class="burgerContainer">
-                <div class="col-sm-6 text-center" class="task">
-                    <div class="row">
-                        {{#each burger_data}}
-                        {{#unless this.devoured}}
-                        <div class="col-sm text-center">
-                            <pre>{{this.id}}, {{this.burger_name}}</pre>
-                        </div>
-                        <div class="col-sm-6 text-center">
-                            <form methods="POST" action="/burgers/update?_method=PUT" class="button-size">
-                                <input type="hidden" name="burger_id" type="text" placeholder="Enter a burger you would like to eat"
-                                    value={{this.id}}>
-                                <br>
-
-                                {{!-- devour button --}}
-                                <button type="submit" class="btn btn-danger">DEVOUR!</button>
-                            </form>
-                        </div>
-                        {{/unless}}
-                        {{/each}}
+        <div class="container" id="burgerContainer">
+            <div class="row">
+                {{#each burger_data}}
+                {{#unless this.devoured}}
+                <div class="col-sm-4 text-center" class="task">
+                    {{!-- <div class="col-sm text-center"> --}}
+                        <pre>{{this.id}}. {{this.burger_name}}</pre>
                     </div>
                 </div>
-            </div>
-            <div class="col-sm text-center" class="task">
-                {{#each burger_data}}
-                {{#if this.devoured}}
-                <input class="form-control" type"text" placeholder="{{this.id}}.{{this.burger_name}}" readonly>
-                {{/if}}
-                {{/each}}
+
+                {{!-- devour button --}}
+                <div class="col-sm-4 text-center">
+                    <form methods="POST" action="/burgers/update?_method=PUT" class="button-size">
+                        <input type="hidden" name="burger_id" type="text" value={{this.id}}>
+                        <br>
+
+                        <button type="submit" class="btn btn-danger">DEVOUR!</button>
+                    </form>
+                    {{/unless}}
+                    {{/each}}
+                </div>
+
+                <div class="col-sm-4 text-center" class="task">
+                    {{#each burger_data}}
+                    {{#if this.devoured}}
+                    <input class="form-control" type"text" placeholder="{{this.id}}. {{this.burger_name}}" readonly>
+                    {{/if}}
+                    {{/each}}
+                </div>
             </div>
         </div>
     </div>
