--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,6 +14,9 @@
 
     {{!-- CSS --}}
     <link rel="stylesheet" href="/assets/css/burger_style.css">
+
+    <link href="https://fonts.googleapis.com/css?family=Staatliches" rel="stylesheet">
+
     <title>Eat Da Burger</title>
 </head>
 
