--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -25,7 +25,7 @@
 
                 {{!-- devour button --}}
                 <div class="col-sm-4 text-center">
-                    <form methods="POST" action="/burgers/update?_method=PUT" class="button-size">
+                    <form methods="POST" action="/burgers/updateOne?_method=PUT" class="button-size">
                         <input type="hidden" name="burger_id" type="text" value={{this.id}}>
                         <br>
                 </div>
@@ -50,7 +50,7 @@
     <div class="container" id="userBurgerContainer">
         <div class="row">
             <div class="col-sm text-center enter_section">
-                <form action="/burgers/create" method="POST">
+                <form action="/burgers/insertOne" method="POST">
                     <input type="text" name="burger_name" class="form-control" value="" id="enter_text">
                     {{!-- -------------------------------------------------------------------------------- --}}
                     {{!-- submit button --}}
