--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -25,7 +25,7 @@
 
                 {{!-- devour button --}}
                 <div class="col-sm-4 text-center">
-                    <form methods="POST" action="/burgers/updateOne?_method=PUT" class="button-size">
+                    <form method="POST" action="/burgers/updateOne?_method=PUT" class="button-size">
                         <input type="hidden" name="burger_id" type="text" value={{this.id}}>
                         <br>
                 </div>
